...
    <string name="oauth_access_token_secret">oauth_access_token_secret</string>

    <string name="beta_login_screen">In this version, you must log in to or create a Discogs account to browse</string>

    <string name="action_settings">Settings</string>
    <string name="discogs_base">https://api.discogs.com</string>
    <string name="drawer_item_collection">Collection</string>
    <string name="drawer_item_wantlist">Wantlist</string>
    <string name="drawer_item_search">Search</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_logout">Logout</string>

    <string name="orders">Orders</string>
    <string name="selling">Selling</string>

    <string name="consumer_key">YkTWFsitqurUQSvyQwaG</string>
    <string name="consumer_secret">PJHslKRSRmZURHXdPWBSKNZPbdsGpASW</string>

    <string name="username">username</string>
    <string name="avatar_url">avatar_url</string>
...
