...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lytMainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
...
            android:title="Home"
            app:subtitleTextColor="@android:color/white"
            app:titleTextColor="@android:color/white"
            />

        <bj.vinylbrowser.customviews.MyRecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </bj.vinylbrowser.customviews.MyRecyclerView>

    </LinearLayout>
...
