...
        android:paddingTop="@dimen/margin_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Buyer:"
            android:textSize="@dimen/text_normal"/>

        <TextView
            android:id="@+id/tvBuyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
